services planned destroyed